# smartcooks

./: .gitignore  BM25修改.md  RUN_GUIDE.md  chat_history.db  debug_comparison.py  debug_retrieval.py
backend/: .env  .env.example  .gitignore  chat_history.db  main.py  pyproject.toml  rag_system.py  requirements.txt
backend/api/: __init__.py  deps.py
backend/api/routers/: __init__.py  food.py  rag_router.py  upload_router.py
backend/api/v1/: api.py
backend/api/v1/endpoints/: chat.py  image.py  rag.py  upload.py
backend/core/: config.py  database.py  prompts.py  rag_system.py
backend/models/: chat.py
backend/rag_modules/: __init__.py  data_preparation.py  generation_integration.py  retrieval_optimization.py
backend/schemas/: chat.py  common.py  image.py  rag.py  upload.py
backend/services/: chat_service.py  image_service.py  rag_service.py  upload_service.py
backend/vector_index/: index.faiss  index.pkl
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js
